dashboard/dashb-mongo.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dashb-mongo-deployment
  labels:
    app: dashb-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashb-mongo
  template:
    metadata:
      labels:
        app: dashb-mongo
    spec:
      containers:
        - name: mongo-dashboard
          image: eucaim.cancerimage.eu:10443/library/mongodb
          command:
            - /usr/bin/mongod
          args:
            - '--config'
            - /data/mongod.conf
          ports:
            - containerPort: 27017
              protocol: TCP
          resources: 
            requests: 
              cpu: 2
              memory: 4Gi
          volumeMounts:
            - name: dashb-mongo-vol
              mountPath: /data
            - name: kube-api-access-hb96r
              readOnly: true
              mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      volumes:
        - name: dashb-mongo-vol
          persistentVolumeClaim:
            claimName: dashb-mongo-vol-pvc
        - name: kube-api-access-hb96r
          projected:
            sources:
              - serviceAccountToken:
                  expirationSeconds: 3607
                  path: token
              - configMap:
                  name: kube-root-ca.crt
                  items:
                    - key: ca.crt
                      path: ca.crt
              - downwardAPI:
                  items:
                    - path: namespace
                      fieldRef:
                        apiVersion: v1
                        fieldPath: metadata.namespace
            defaultMode: 420
