dashboard/eucaim-ingress-template.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: eucaim-ingress
  namespace: mockup
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  tls:
    - hosts:
        - dashboard.eucaim.cancerimage.eu
      secretName: dashboard.eucaim.cancerimage.eu
  rules:
    - host: dashboard.eucaim.cancerimage.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashb-node-service
                port:
                  number: 8080
